src/sass/styles.scss
@charset "UTF-8";
@use "sass:map";

@import "settings";
@import "vanilla-framework/scss/build";
@import "./breakpoints";

@import "pattern_icon";
@include lxdui-p-icon;
@include vf-p-icon-applications;
@include vf-p-icon-begin-downloading;
@include vf-p-icon-canvas;
@include vf-p-icon-change-version;
@include vf-p-icon-close;
@include vf-p-icon-connected;
@include vf-p-icon-containers;
@include vf-p-icon-copy-to-clipboard;
@include vf-p-icon-disconnect;
@include vf-p-icon-edit;
@include vf-p-icon-export;
@include vf-p-icon-fullscreen;
@include vf-p-icon-get-link;
@include vf-p-icon-import;
@include vf-p-icon-machines;
@include vf-p-icon-open-terminal;
@include vf-p-icon-pause;
@include vf-p-icon-play;
@include vf-p-icon-pods;
@include vf-p-icon-power-off;
@include vf-p-icon-priority-low;
@include vf-p-icon-restart;
@include vf-p-icon-security;
@include vf-p-icon-settings;
@include vf-p-icon-status-failed-small;
@include vf-p-icon-status-in-progress-small;
@include vf-p-icon-status-queued-small;
@include vf-p-icon-status-succeeded-small;
@include vf-p-icon-status-waiting-small;
@include vf-p-icon-stop;
@include vf-p-icon-switcher-environments;
@include vf-p-icon-task-outstanding;
@include vf-p-icon-units;
@include vf-p-icon-video-play;
@include vf-p-icon-warning-grey;

$border-thin: 1px solid $color-mid-light !default;

@import "certificates";
@import "configuration_table";
@import "detail_panels";
@import "empty_state";
@import "file_row";
@import "forms";
@import "instance_detail_console";
@import "instance_detail_overview";
@import "instance_detail_page";
@import "instance_detail_panel";
@import "instance_detail_snapshots";
@import "instance_detail_terminal";
@import "instance_list";
@import "meter";
@import "network_map";
@import "no_match";
@import "pagination";
@import "pattern_navigation";
@import "pattern_terminal";
@import "profile_detail_overview";
@import "profile_detail_page";
@import "profile_detail_panel";
@import "profile_list";
@import "profile_used_by_default_project";
@import "project_select";
@import "rename_header";
@import "selectable_main_table";

.l-main .row {
  max-width: none;
}

.u-vertical-align-middle {
  vertical-align: middle;
}

.u-inline-block {
  display: inline-block;
}

.storage-detail-table {
  th {
    width: 12rem;
  }
}

.no-grid-gap {
  grid-gap: 0;
}

.u-loader {
  margin: $sp-large;
}

.p-bottom-controls {
  background-color: white;
  bottom: 0;
  position: sticky;

  div {
    margin-top: 0.5rem;
  }
}

.status-icon {
  margin-right: $sph--x-small;
}

.external-link-icon {
  @include vf-icon-external-link($color-link);
}

.empty-instances-icon {
  @include vf-icon-containers($color-mid-light);
}

.empty-networks-icon {
  @include vf-icon-connected($color-mid-light);
}

.empty-storages-icon {
  @include vf-icon-pods($color-mid-light);
}

.lxd-icon {
  background-image: url("data:image/svg+xml,%0A%3Csvg width='38' height='38' viewBox='0 0 38 38' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M28.5311 15.7998V5.71128L18.6554 0L8.77977 5.71128V15.7998L0 20.8683V32.2887L9.87566 38L18.6554 32.9083L27.4352 37.9768L37.3108 32.2655V20.8451L28.5311 15.7998ZM18.6554 2.57113L26.3182 6.99684V15.7998L18.6554 20.2487L10.9694 15.823V7.02002L18.6554 2.57113ZM9.87566 35.431L2.21286 31.0053V22.1538L9.85037 17.7513L17.5595 22.2002V31.0032L9.87355 35.4289L9.87566 35.431ZM35.098 31.0053L27.4352 35.431L19.7724 31.0053V22.2023L27.4816 17.7534L35.1191 22.156V31.0074H35.0959L35.098 31.0053Z' fill='%23D9D9D9'/%3E%3Cpath d='M28.1978 31.9072L32.4085 29.4099V24.4594L28.1978 26.9357V31.9072Z' fill='%23D9D9D9'/%3E%3Cpath d='M27.4119 20.7966L23.2012 23.2223L27.4372 25.627L31.648 23.1507L27.4119 20.7966Z' fill='%23D9D9D9'/%3E%3Cpath d='M22.4635 29.4816L26.6995 31.9558V26.9357L22.415 24.5311L22.4635 29.4816Z' fill='%23D9D9D9'/%3E%3Cpath d='M9.85235 20.7966L5.6416 23.2223L9.87553 25.627L14.0884 23.1507L9.85235 20.7966Z' fill='%23D9D9D9'/%3E%3Cpath d='M4.90371 29.4816L9.13764 31.9558V26.9357L4.87842 24.5311L4.90371 29.4816Z' fill='%23D9D9D9'/%3E%3Cpath d='M10.6387 31.9072L14.8726 29.4099V24.4594L10.6387 26.9357V31.9072Z' fill='%23D9D9D9'/%3E%3Cpath d='M22.8455 7.97052L18.6326 5.63965L14.4219 8.06536L18.6326 10.4447L22.8455 7.97052Z' fill='%23D9D9D9'/%3E%3Cpath d='M17.8946 16.7755V11.7534L13.6606 9.35083L13.6838 14.3245L17.8946 16.7755Z' fill='%23D9D9D9'/%3E%3Cpath d='M19.3955 16.7503L23.6294 14.2529V9.2561L19.3955 11.7535V16.7503Z' fill='%23D9D9D9'/%3E%3C/svg%3E%0A");
}

.clear-selection-icon {
  @include vf-icon-close($color-link);
}

.actions-list {
  display: inline-block;
  min-width: 8.5rem;

  & > * {
    border-right: $border-thin;
    margin: 0;
    padding-left: 0;
    padding-right: 0;

    button {
      margin: 0;
      width: 44px;
    }
  }

  & > *:last-child {
    border-right: none;
  }
}

// smaller padding on top of all pages to have the logo flush on top
.p-panel__title,
.p-panel__controls {
  padding-top: $spv--x-small;
}

.p-panel__title {
  padding-bottom: $spv--medium;
}

.p-breadcrumbs {
  margin-bottom: 0;
  width: inherit;

  .p-breadcrumbs__items {
    margin-bottom: 0;
  }

  .p-breadcrumbs__item {
    font-size: #{map.get($font-sizes, h4-mobile)}rem;
    line-height: 2rem;
    margin-bottom: 0;
    margin-top: 0;
    padding-top: 0;
  }

  .p-breadcrumbs__item:first-of-type {
    margin-right: $sp-x-small;
  }
}

.p-tabs__list {
  margin-bottom: $spv--large !important;
}

.u-space-between {
  display: flex;
  justify-content: space-between;
}

.u-flex-row-reverse {
  flex-direction: row-reverse;
}

.u-no-border {
  border: none !important;
}

.item-name {
  overflow-wrap: anywhere;
}

.header-second-row {
  display: inline-block;
  padding-top: 1px;
}

@media (min-width: 460px) {
  .l-application .l-aside.is-narrow {
    width: 25.65rem;
  }
}

